# Linder

./: .env.production  .gitignore  index.html  load_test.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  riot_stub.py  run_k6_tests.py  spec.md  stress_test.py  vite.config.ts
.github/workflows/: deploy.yml
app/: config.py  db.py  dependencies.py  main.py  repository.py
app/routes/: auth.py  candidates.py  match.py  notifications.py  swipes.py
app/services/: auth.py  push.py  riot.py
public/: manifest.json  sw.js
src/: App.tsx  index.css
tests/: conftest.py  test_flows.py
url-to-markdown/poggecci.github.io/: linder.md
